Removed quantum computing parts.

--- a/Theory/Theory.tex
+++ b/Theory/Theory.tex
@@ -6,5 +6,5 @@
 \input{Theory/Many-Body Physics/manybodymethods}
 \chapter{Models}
 \input{Theory/Models/models}
-\chapter{Quantum Computing}
-\input{Theory/Quantum Computing/quantumcomputing}
+%\chapter{Quantum Computing}
+%\input{Theory/Quantum Computing/quantumcomputing}
