--- a/Implementation/Restricted Boltzmann Machine/Restricted Boltzmann Machine.tex
+++ b/Implementation/Restricted Boltzmann Machine/Restricted Boltzmann Machine.tex
@@ -1,2 +1,5 @@
+\input{Implementation/Restricted Boltzmann Machine/The base structure}
+\input{Implementation/Restricted Boltzmann Machine/Model initialization}
+\input{Implementation/Restricted Boltzmann Machine/The solver}
 \input{Implementation/Restricted Boltzmann Machine/Calculation of local energy}
 \input{Implementation/Restricted Boltzmann Machine/implementation tests}
