Added last implementation and model theory.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-    In this paper we
+  In this thesis we build a restricted Boltzmann machine to approximate the ground state energy of the Lipkin-Meshkow-Glick model, the Ising model, the Heisenberg model and the Pairing model with both Gibbs sampling and with a state acceptance criteria. We found that for the Lipkin model our implementation of the restricted Boltzmann machine $ADD$. For the Ising model it $ADD$. Furthermore the Heisenberg model's ground state energy was predicted with an accuracy $ADD$. Lastly the restricted Boltzmann machine managed to predict the ground state energy of the Pairing model with $ADD$. The Gibbs sampling method was found to be $ADD$ than sampling with a acceptance criteria. We found our implementation compute the ground state energy for the Lipkin model at $ADD$, the Ising model at $ADD$, the Heisenberg model at $ADD$ and for the Pairing at $ADD$. Compared to standard diagonalization methods we found that our implementation of the restricted Boltzmann machine $ADD$.
 \end{abstract}
