--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,12 @@
 Machine learning is becoming more and more prevalent in everyday life. As hardware has become stronger and learning models has been refined, machine learning has become a powerful tool to solve a wide variety of problems. Physics is no exception to this, as the last few years has shown a number of fields in physics furthered by machine learning. 
 
-[fields in physics using machine learning].
+Neural networks has been used to solve partial differential equations in the light of fluid dynamics\cite{RAISSI2019686}. For easier imaging of single atoms by noise reduction\cite{PhysRevApplied.14.014011}. For finding phase transitions\cite{vanNieuwenburg2017}, and much more.
 
-Quantum physics has often avenues for direct application of machine learning, as one wants to fit a wavefunction within the bounds of the hamiltonian. As such there has been several ways of approach. One of them boils down to having the output of the neural net being the wavefunction amplitude, as done by [feed forward neural net article] on the [model] model. Another approach is to have the machine be the wavefunction and letting the output be measured states, for example done by [rbm article] on the [model] model. The Ising and Heisenberg models has seen much attention with respect to machine learning methods, and we will therefor use the less popular Lipkin model [source] as well.
+Quantum physics has often avenues for direct application of machine learning, as one wants to fit a wavefunction within the bounds of the Hamiltonian. Neural networks can learn through real measurement data or through the information contained in the Hamiltonian itself. The neural network provides a guess for either the amplitude of a given state, or it can be set up to guess the whole wavefunction as a neural net quantum state as introduced by G. Carlo and M. Troyer in 2017\cite{Carleo_2017}.
 
-Another computational field that has seen a great increase in interest is the field of quantum computation. Pioneered by [person] and [person], showing that quantum computation has some serious advantages to its classical counterparts in certain areas. A widely used algorithm from quantum computation is the variational quantum eigensolver. And as quantum physics problems can often be simplified as an eigenvalue-problem, we will use this algorithm as a way to compare the machine learning method with an alternative.
+Restricted Boltzmann machines is a type of neural network where the network constitutes a probability distribution. It was first proposed by P. Smolensky in 1986 \cite{paul} and brought into the spotlight by G. E. Hinton in 2006 \cite{gehinton}. For development of quantum technologies it is essential to be able to make analysis of quantum systems of increasing complexity. The RBM is capable of learning a probability distribution, something that makes it perfect to use for learning the wavefunction of a quantum system, which is a probability distribution over system states. The use of for machine learning to solve quantum systems has wide application \cite{Xia2018}\cite{PhysRevLett.108.058301}, and in recent years the accessibility has grown through projects such as the python library NetKet\cite{netket3:2022}\cite{netket2:2019}\cite{mpi4jax:2021}. 
+
+However, the high flexibility of NetKet and similar projects can often be a hindrance to deeper understanding of the inner workings of the machine learning methods and algorithms. In this thesis we will look into the use of the restricted Boltzmann machine to find the ground state energy of four different quantum mechanical systems: the Lipkin-Meshkow-Glick model, the Ising model, the Heisenberg model and the Pairing model. For the ease of explaining, and for the proof of concept, the restricted Boltzmann machines and accompanying parts will be built from the ground up.
+
+For a overview the thesis will consist of four parts. In the theory part of the thesis we will go over the relevant theory to understand the implementation, which is described in the implementation part. We will then test and compare our implemented restricted Boltzmann machine with the previously mentioned quantum systems in mind. Lastly we will summarize and bring it together in the conclusion.
+
